...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ANC-y0-v8b">
                                <rect key="frame" x="113" y="361" width="191" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="titleBook"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="g4L-qW-ASc"/>
                                </connections>
                            </textField>
...
                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="KEk-gS-bYh"/>
                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="9nE-sq-feB"/>
                                </connections>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RJY-eg-sU3">
                                <rect key="frame" x="16" y="518" width="184" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="addChapter"/>
                                <state key="normal" title="Add Chapter">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="btnAddRemoveChapter:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Ymn-cj-PQR"/>
                                </connections>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YGE-3R-2yQ">
                                <rect key="frame" x="136" y="50" width="49" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="titleOfBook" label=""/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
